# PhotoSplat3D

./: .env.example  .gitignore  ACKNOWLEDGEMENTS  CONTRIBUTING.md  LICENSE  NOTICE  README.md  README_cn.md  SECURITY.md  build_app.py  build_release.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
scripts/: bootstrap.sh  update_photosplat.command
src/sharp/: __init__.py  version.py
src/sharp/cli/: __init__.py  gui.py  predict.py  render.py
src/sharp/gui/: __init__.py  config_manager.py  constants.py  control_panel.py  history_manager.py  i18n.py  image_item.py  image_list_panel.py  launcher.py  main_window.py  modal_client.py  progress_panel.py  viewer_app.py  worker.py
src/sharp/models/: __init__.py  alignment.py  blocks.py  composer.py  gaussian_decoder.py  heads.py  initializer.py  monodepth.py  normalizers.py  params.py  predictor.py
src/sharp/models/decoders/: __init__.py  base_decoder.py  monodepth_decoder.py  multires_conv_decoder.py  unet_decoder.py
src/sharp/models/encoders/: __init__.py  base_encoder.py  monodepth_encoder.py  spn_encoder.py  unet_encoder.py  vit_encoder.py
src/sharp/models/presets/: __init__.py  monodepth.py  vit.py
src/sharp/utils/: __init__.py  camera.py  color_space.py  gaussians.py  gsplat.py  io.py  linalg.py  logging.py  math.py  module_surgery.py  panorama.py  robust.py  training.py  vis.py
viewer/: index.html  styles.css  viewer.js
